# karmachain

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  README.md  chainSpec.json  myCustomSpec.json  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: check.yml
.postman/: karmachain-rpc.postman_collection.json
chain-spec/: chainSpec.json  chainSpec.json.md  chainSpecTN1.json  chainSpecTN2.json
client/rpc-api/: Cargo.toml
client/rpc-api/src/: lib.rs
client/rpc-api/src/chain/: client.rs  error.rs  mod.rs
client/rpc-api/src/events/: client.rs  error.rs  mod.rs
client/rpc-api/src/identity/: client.rs  mod.rs
client/rpc-api/src/nomination_pools/: client.rs  error.rs  mod.rs
client/rpc-api/src/staking/: client.rs  mod.rs
client/rpc-api/src/transactions/: client.rs  error.rs  mod.rs
client/rpc-api/src/verifier/: client.rs  error.rs  mod.rs
client/runtime-api/: Cargo.toml
client/runtime-api/src/: chain.rs  events.rs  identity.rs  lib.rs  nomination_pools.rs  staking.rs  transactions.rs  verifier.rs
docs/: basic-transactions.md  run-a-validator.md  testnet-validator.md
frame/: Readme.md
frame/appreciation/: Cargo.toml
frame/appreciation/src/: lib.rs  types.rs
frame/identity/: Cargo.toml
frame/identity/rpc/: Cargo.toml
frame/identity/rpc/runtime-api/: Cargo.toml
frame/identity/rpc/runtime-api/src/: lib.rs
frame/identity/rpc/src/: lib.rs
frame/identity/src/: lib.rs  types.rs
frame/reward/: Cargo.toml
frame/reward/src/: crypto.rs  lib.rs  types.rs
frame/transaction-indexer/: Cargo.toml
frame/transaction-indexer/rpc/: Cargo.toml
frame/transaction-indexer/rpc/runtime-api/: Cargo.toml
frame/transaction-indexer/rpc/runtime-api/src/: lib.rs
frame/transaction-indexer/rpc/src/: client.rs  error.rs  lib.rs  traits.rs
frame/transaction-indexer/src/: lib.rs
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  lib.rs  rpc.rs  service.rs
node/src/chain_spec/: backup.rs  dev.rs  import.rs  mod.rs  testnet.rs  utils.rs
node/tests/: backup.rs  rpc.rs  utils.rs
node/tests/resources/: backup.json
primitives/: Readme.md
primitives/common/: Cargo.toml
primitives/common/src/: hooks.rs  identity.rs  lib.rs  traits.rs  types.rs  username.rs
primitives/rpc/: Cargo.toml
primitives/rpc/src/: api.rs  chain.rs  identity.rs  lib.rs  nomination_pools.rs  staking.rs  transactions.rs  types.rs  verifier.rs
runtime/: Cargo.toml
runtime/src/: api.rs  appreciation.rs  babe.rs  consts.rs  election_provider_multi_phase.rs  era_payout.rs  grandpa.rs  historical.rs  identity.rs  lib.rs  offchain.rs  opaque.rs  staking.rs  sudo.rs  timestamp.rs  transaction_payment.rs  types.rs  utils.rs  validators_rewards.rs
runtime/src/extensions/: check_account.rs  mod.rs  transaction_payment.rs
runtime/src/pallets/: appreciation.rs  authorship.rs  babe.rs  bags_list.rs  balances.rs  election_provider_multi_phase.rs  grandpa.rs  identity.rs  im_online.rs  mod.rs  nomination_pools.rs  offence.rs  reward.rs  session.rs  staking.rs  sudo.rs  system.rs  transaction_indexer.rs  transaction_payment.rs  treasury.rs  utility.rs
runtime/tests/: api.rs  check_whitelist.rs  common.rs  delete_user.rs  management.rs  metadata.rs  new_user_flow.rs  payout_tests.rs  utils.rs
runtime/tests/api/: identity.rs
scripts/: devnet.sh
