[workspace]
members = [
    "node",
    "runtime",
    "frame/appreciation",
    "frame/identity",
    "frame/identity/rpc",
    "frame/identity/rpc/runtime-api",
    "frame/transaction-indexer",
    "frame/transaction-indexer/rpc",
    "frame/transaction-indexer/rpc/runtime-api",
    "primitives/common",
    "primitives/rpc",
]
[profile.release]
panic = "unwind"
