[workspace]
members = [
    "node",
    "runtime",
    "client/rpc-api",
    "client/runtime-api",
    "frame/appreciation",
    "frame/identity",
    "frame/identity/rpc",
    "frame/identity/rpc/runtime-api",
    "frame/transaction-indexer",
    "primitives/common",
    "primitives/rpc",
]
[profile.release]
panic = "unwind"
