[package]
name = "runtime-api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.160", optional = true }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-weights = { version = "4.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
pallet-nomination-pools = { version = "1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }


sp-rpc = { version = "0.2.0", default-features = false, path = "../../primitives/rpc" }
sp-common = { version = "0.2.0", default-features = false, path = "../../primitives/common" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"scale-info/std",
	"sp-api/std",
	"pallet-nomination-pools/std",
	"sp-runtime/std",
	"sp-weights/std",
	"sp-rpc/std",
	"sp-common/std",
]
